[gd_scene load_steps=8 format=3 uid="uid://b7dayc6n1vkqn"]

[ext_resource type="Script" path="res://informant.gd" id="1_6y0i4"]
[ext_resource type="Texture2D" uid="uid://bk7rx8aqcclua" path="res://assets/Tiny Town/Tiles/tile_0083.png" id="2_06vlj"]
[ext_resource type="Texture2D" uid="uid://bjh48txv1nfmj" path="res://assets/Xelu Controller Prompts/Keyboard & Mouse/Light/E_Key_Light.png" id="3_gixrd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrn8e"]
size = Vector2(14, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_7cbp0"]
radius = 16.0

[sub_resource type="Animation" id="Animation_y75y4"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 2), Vector2(0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrytt"]
_data = {
"float": SubResource("Animation_y75y4")
}

[node name="Informant" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_6y0i4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_06vlj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_nrn8e")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7cbp0")

[node name="InteractionLabel" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -1.4357)
scale = Vector2(0.1, 0.1)

[node name="HBoxContainer" type="HBoxContainer" parent="InteractionLabel"]
z_index = 1
offset_left = -115.0
offset_top = -190.0
offset_right = 139.0
offset_bottom = -90.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="InteractionLabel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
text = "Press"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="InteractionLabel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_gixrd")

[node name="FloatAnimation" type="AnimationPlayer" parent="InteractionLabel"]
libraries = {
"": SubResource("AnimationLibrary_vrytt")
}
autoplay = "float"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
